--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         publish_dir: ./public
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         cname: wiki.wgpsec.org
-        user_name: 'WgpSec Continuous Integration' 
-        user_email: 'ci@wgpsec.org'  
