--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,4 +31,6 @@ jobs:
       with:
         publish_dir: ./public
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        user_name: 'WgpSec Continuous Integration' 
+        user_email: 'ci@wgpsec.org'  
         cname: wiki.wgpsec.org
